import VoucherAlertBoxTestCases from "../VoucherAlertBoxTestCases";
import testRunner from "../../../../../Services/testRunner/testRunner";

VoucherAlertBoxTestCases.map(testRunner);
